--- a/exchangeFront/exchangeFront.Client/exchangeFront.Client.csproj
+++ b/exchangeFront/exchangeFront.Client/exchangeFront.Client.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.*" />
   	<PackageReference Include="MudBlazor" Version="6.*" />
+  	<PackageReference Include="Radzen.Blazor" Version="4.31.1" />
   </ItemGroup>
 
 </Project>
