--- a/exchangeFront/exchangeFront/exchangeFront.csproj
+++ b/exchangeFront/exchangeFront/exchangeFront.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\exchangeFront.Client\exchangeFront.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.*" />
+    <PackageReference Include="Radzen.Blazor" Version="4.31.1" />
   </ItemGroup>
 
 </Project>
