--- a/ExchangeServer/ExchangeServer/appsettings.json
+++ b/ExchangeServer/ExchangeServer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ExchangeServerContext": "server=localhost;username=postgres;database=ExchangeServerContext-c7b27a44-fedb-4db2-a881-95f9b7d07fec"
+  }
 }
