--- a/ExchangeServer/ExchangeServer/ExchangeServer.csproj
+++ b/ExchangeServer/ExchangeServer/ExchangeServer.csproj
@@ -19,4 +19,10 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Data\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
