--- a/ExchangeServer/ExchangeServer/appsettings.json
+++ b/ExchangeServer/ExchangeServer/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ExchangeServerContext": "server=localhost;username=postgres;database=ExchangeServerContext-c7b27a44-fedb-4db2-a881-95f9b7d07fec"
+    "ExchangeServerContext": "server=host.docker.internal;username=postgres;database=ExchangeServerContext-c7b27a44-fedb-4db2-a881-95f9b7d07fec",
+    "Redis": "redis_image:6379,abortConnect=False"
   },
-  "DatabaseConfig": {
-    "PostgresSQL": "Server=host.docker.internal;Port=5432;Database=mydbname;User Id=app;Password=app;"
-  }
+  
+  
 }
