--- a/ExchangeServer/ExchangeServer/appsettings.json
+++ b/ExchangeServer/ExchangeServer/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ExchangeServerContext": "server=host.docker.internal;username=postgres;database=ExchangeServerContext-c7b27a44-fedb-4db2-a881-95f9b7d07fec",
+    "ExchangeServerContext": "server=host.docker.internal;database=ExchangeServerContext-c7b27a44-fedb-4db2-a881-95f9b7d07fec; User Id=postgres;Password=postgres;",
     "Redis": "redis_image:6379,abortConnect=False"
   },
   
